PA_Education/TestMenifest/force-app/main/default/objects/Account/fields/Bank__c.field-meta.xml
<CustomField>
    <fullName>Bank__c</fullName>
    <label>거래은행</label>
    <length>50</length>
    <type>Text</type>
</CustomField>