PA_Education/TestMenifest/force-app/main/default/objects/Account/fields/BankAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>BankAccountNumber__c</fullName>
    <label>계좌번호</label>
    <length>20</length>
    <type>Text</type>
</CustomField>