PA_Education/TestMenifest/force-app/main/default/objects/Account/fields/BizRegNumber__c.field-meta.xml
<CustomField>
    <fullName>BizRegNumber__c</fullName>
    <inlineHelpText>***-**-***** 형식으로 입력</inlineHelpText>
    <label>사업자등록번호</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>