PA_Education/TestMenifest/force-app/main/default/objects/Account/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <externalId>true</externalId>
    <label>코드</label>
    <length>2</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>