PA_Education/TestMenifest/force-app/main/default/objects/Account/fields/Collect_Date__c.field-meta.xml
<CustomField>
    <fullName>Collect_Date__c</fullName>
    <label>세금계산서 발행 후 회수일수</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>