PA_Education/TestMenifest/force-app/main/default/objects/Account/fields/CorpRegNumber__c.field-meta.xml
<CustomField>
    <fullName>CorpRegNumber__c</fullName>
    <inlineHelpText>******-******* 형식으로 입력</inlineHelpText>
    <label>법인등록번호</label>
    <length>14</length>
    <type>Text</type>
</CustomField>