PA_Education/TestMenifest/force-app/main/default/objects/Account/fields/IsTypePurchase__c.field-meta.xml
<CustomField>
    <fullName>IsTypePurchase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>매입거래처 여부</label>
    <type>Checkbox</type>
</CustomField>