PA_Education/TestMenifest/force-app/main/default/objects/Account/fields/IsTypeSales__c.field-meta.xml
<CustomField>
    <fullName>IsTypeSales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>매출거래처 여부</label>
    <type>Checkbox</type>
</CustomField>