PA_Education/TestMenifest/force-app/main/default/objects/Account/fields/NameEng__c.field-meta.xml
<CustomField>
    <fullName>NameEng__c</fullName>
    <label>Account Name (English)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>