PA_Education/TestMenifest/force-app/main/default/objects/Account/validationRules/CorpRegNumberValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>CorpRegNumberValidation</fullName>
    <active>true</active>
    <errorConditionFormula>MOD(10 - MOD 
(VALUE(MID(CorpRegNumber__c, 1,  1))      + 
(VALUE(MID(CorpRegNumber__c, 2,  1)) * 2) + 
 VALUE(MID(CorpRegNumber__c, 3,  1))      + 
(VALUE(MID(CorpRegNumber__c, 4,  1)) * 2) + 
 VALUE(MID(CorpRegNumber__c, 5,  1))      + 
(VALUE(MID(CorpRegNumber__c, 6,  1)) * 2) + 
 VALUE(MID(CorpRegNumber__c, 8,  1))      + 
(VALUE(MID(CorpRegNumber__c, 9,  1)) * 2) + 
 VALUE(MID(CorpRegNumber__c, 10, 1))      + 
(VALUE(MID(CorpRegNumber__c, 11, 1)) * 2) + 
 VALUE(MID(CorpRegNumber__c, 12, 1))      + 
(VALUE(MID(CorpRegNumber__c, 13, 1)) * 2) 
, 10), 10) !=
 VALUE(MID(CorpRegNumber__c, 14, 1))</errorConditionFormula>
    <errorDisplayField>CorpRegNumber__c</errorDisplayField>
    <errorMessage>잘못된 법인등록번호입니다.
번호를 확인하세요.</errorMessage>
</ValidationRule>