PA_Education/TestMenifest/force-app/main/default/objects/Account/listViews/All_Account.listView-meta.xml
<ListView>
    <fullName>All_Account</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ShortName__c</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.PHONE2</columns>
    <columns>CorpRegNumber__c</columns>
    <columns>BizRegNumber__c</columns>
    <columns>StateDistrict__c</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <label>1. All Account</label>
</ListView>