PA_Education/TestMenifest/force-app/main/default/objects/Account/listViews/Have_Activity.listView-meta.xml
<ListView>
    <fullName>Have_Activity</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ShortName__c</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.PHONE2</columns>
    <columns>CorpRegNumber__c</columns>
    <columns>BizRegNumber__c</columns>
    <columns>StateDistrict__c</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.LAST_ACTIVITY</field>
        <operation>notEqual</operation>
    </filters>
    <label>2. Have Activity</label>
</ListView>