PA_Education/TestMenifest/force-app/main/default/objects/Account/listViews/No_Activity_Last_6_Months.listView-meta.xml
<ListView>
    <fullName>No_Activity_Last_6_Months</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ShortName__c</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.PHONE2</columns>
    <columns>CorpRegNumber__c</columns>
    <columns>BizRegNumber__c</columns>
    <columns>StateDistrict__c</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.LAST_ACTIVITY</field>
        <operation>notEqual</operation>
        <value>LAST_N_MONTHS:6</value>
    </filters>
    <label>4. No Activity Last 6 Months</label>
</ListView>